maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:28: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:35: error: Unmatched closing brace '}' ignored here
}
^